United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6883468 C2 compiler enters infinite loop running out of native heap. assertion in PhaseIterGVN::transform
6883468 : C2 compiler enters infinite loop running out of native heap. assertion in PhaseIterGVN::transform

Details
Type:
Bug
Submit Date:
2009-09-18
Status:
Resolved
Updated Date:
2010-07-29
Project Name:
JDK
Resolved Date:
2009-10-07
Component:
hotspot
OS:
linux_redhat_5.2
Sub-Component:
compiler
CPU:
x86
Priority:
P2
Resolution:
Fixed
Affected Versions:
6u16
Fixed Versions:
hs16

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
C2 compiler enters an infinite loop consuming all native heap and finally
crashes. This is reproducible with 6u13+ including 6u18b02. 6u01 does
not have this bug. The issue hence was introduced after 6u01 but before 6u14.

This bug is reproducible with a non-trivial test case from a customer.
When running a 6u18b02 fastdebug we get an assertion:

#  Internal Error (/BUILD_AREA/jdk6_18/hotspot/src/share/vm/opto/phaseX.cpp:1015), pid=23563, tid=1911593872
#  Error: assert(loop_count < K,"infinite loop in PhaseIterGVN::transform")
#
# JRE version: 6.0_18-b02
# Java VM: Java HotSpot(TM) Server VM (16.0-b09-fastdebug mixed mode linux-x86 )

I attach hotspot.log and hs_err_pid23563.log

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/2c0279a08300
                                     
2009-10-04
PUBLIC COMMENTS

Problem:
There is ideal transformation ping-pong between AddPNode::Ideal()
for raw pointer and CastX2PNode::Ideal() transformation which
reconstruct raw AddP node again with the same input SubI(#0, Phi).

Solution:
Avoid transformation in CastX2PNode::Ideal() if input is SubI node
and its in(1) is ConI(#0).
                                     
2009-09-28
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/ddd6f1182ae3
                                     
2009-09-26
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/2c0279a08300
                                     
2009-09-25



Hardware and Software, Engineered to Work Together