6883468: C2 compiler enters infinite loop in PhaseIterGVN::transform

Avoid ideal transformation ping-pong between AddPNode::Ideal() and CastX2PNode::Ideal().

Reviewed-by: cfang